Initialisation Module stats + Navigation stats

--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -199,7 +199,7 @@
                             data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a href="#/private/statEvent/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <a href="#/private/eventStats/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
                     </div>
                 </div>
 
@@ -217,7 +217,7 @@
                             data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a href="#/private/statEvent/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <a href="#/private/eventStats/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
                     </div>
                 </div>
 
@@ -235,7 +235,7 @@
                             data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a href="#/private/statEvent/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <a href="#/private/eventStats/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
                     </div>
                 </div>
 
@@ -253,7 +253,7 @@
                             data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a href="#/private/statEvent/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <a href="#/private/eventStats/{{currentEvent._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
                     </div>
                 </div>
             </li>
