--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                     <div class="col m4 s12 center-align">
-                        <a href="#/private/statPlayer/{{player._id}}">
+                        <a href="#/private/playerStats/{{player._id}}">
                             <i class="red-text text-lighten-1 small fa fa-bar-chart tooltipped" 
                             data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
                         </a>
