--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -9,7 +9,7 @@
     </div> -->
     
     <div class="row">
-        <wizard on-finish="checkAndformatPerson()" template="app/components/directives/wizard/wizard.html"> 
+        <wizard on-finish="createSandBox()" template="app/components/directives/wizard/wizard.html"> 
             
             <!-- step infos personnes -->
             <wz-step title="{{'userLabels.userSignupCivilSection' | translate }}" template="app/components/directives/wizard/step.html">
@@ -22,12 +22,12 @@
                             <label>{{'userLabels.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col m5 s6">
-                            <input name="user.gender" class="with-gap" type="radio" id="userGenderF" value="{{'userLabels.userGenderF' | translate }}"
-                                       ng-model="user.gender" required/>
+                            <input name="signup.gender" class="with-gap" type="radio" id="userGenderF" value="{{'userLabels.userGenderF' | translate }}"
+                                       ng-model="signup.gender" required/>
                             <label for="userGenderF">{{'userLabels.userGenderF' | translate }}</label>
 
-                            <input name="user.gender" class="with-gap" type="radio" id="userGenderM" value="{{'userLabels.userGenderM' | translate }}"
-                               ng-model="user.gender" required/>
+                            <input name="signup.gender" class="with-gap" type="radio" id="userGenderM" value="{{'userLabels.userGenderM' | translate }}"
+                               ng-model="signup.gender" required/>
                             <label for="userGenderM">{{'userLabels.userGenderM' | translate }}</label>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -36,11 +36,11 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m3 s6">
-                          <input placeholder="{{'userLabels.userFirstname' | translate }}" ng-model="user.firstname" id="userFirstname" type="text" class="validate" required>
+                          <input placeholder="{{'userLabels.userFirstname' | translate }}" ng-model="signup.firstname" id="userFirstname" type="text" class="validate" required>
                           <label for="userFirstname">{{'userLabels.userFirstname' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col m3 s6">
-                          <input placeholder="{{'userLabels.userName' | translate }}" ng-model="user.name" id="userName" type="text" class="validate" required>
+                          <input placeholder="{{'userLabels.userName' | translate }}" ng-model="signup.name" id="userName" type="text" class="validate" required>
                           <label for="userName">{{'userLabels.userName' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -49,7 +49,7 @@
                      <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m4 s6">
-                            <input type="text" id="userNationality" class="form-control" ng-autocomplete ng-model="user.nationality" details="detailsCountry" options="optionsCountry" placeholder="" />
+                            <input type="text" id="userNationality" class="form-control" ng-autocomplete ng-model="signup.nationality" details="detailsCountry" options="optionsCountry" placeholder="" />
                             <label for="userNationality">{{'userLabels.userNationality' | translate }}</label>
                         </div>
                         <div class="input-field col m2 s6">
@@ -57,7 +57,7 @@
                                 <label for="userBirthDate">{{'userLabels.userBirthDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
                             </div>
                             <div class="input-field col s12">
-                                <input placeholder="{{'userLabels.userBirthDate' | translate }}" ng-model="user.birthdate" id="userBirthDate" type="date" class="validate" required>
+                                <input placeholder="{{'userLabels.userBirthDate' | translate }}" ng-model="signup.birthdate" id="userBirthDate" type="date" class="validate" required>
                             </div>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -70,7 +70,7 @@
                             <label for="playerMail">{{'userLabels.userEMail' | translate }}</label>
                         </div>
                         <div class="input-field col m4 s8">
-                            <input id="userEMail" type="email" class="validate" ng-model="user.contact.email">                            
+                            <input id="userEMail" type="email" class="validate" ng-model="signup.contact.email">                            
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="input-field col m4 s8">
                             <input id="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" 
-                                   class="validate" min="0" ng-model="user.contact.home">
+                                   class="validate" min="0" ng-model="signup.contact.home">
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="input-field col m4 s8">
                             <input id="userPhoneOffice" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" 
-                                   class="validate" min="0" ng-model="user.contact.office">
+                                   class="validate" min="0" ng-model="signup.contact.office">
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="input-field col m4 s8">
                             <input id="userCellPhone" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}"
-                                   class="validate" min="0" ng-model="user.contact.cellphone">
+                                   class="validate" min="0" ng-model="signup.contact.cellphone">
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -125,7 +125,7 @@
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
                             <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
+                            <button class="btn white-text green darken-1" wz-next type="submit" ng-click="infos()" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -147,8 +147,8 @@
                         <div class="col m6 s12">
                             <div class="col m3" ng-repeat="activity in activities">
                                 <img  src="assets/images/activity/{{activity.code}}.jpg"/><br/>
-                                <input name="user.activity" class="with-gap" type="radio" id="activity.{{activity._id}}" value="{{activity.label | translate }}"
-                                       ng-model="user.activity" required ng-disabled="{{activity.enable==false}}"/>
+                                <input name="signup.activity" class="with-gap" type="radio" id="activity.{{activity._id}}" value="{{activity._id}}" placeholder="{{activity.label | translate }}"
+                                       ng-model="signup.activity" required ng-disabled="{{activity.enable==false}}"/>
                                 <label for="activity.{{activity._id}}">{{activity.label | translate }}</label>
                             </div>
                         </div>
@@ -162,7 +162,8 @@
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
                             <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
+                            <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
+                            <button class="btn white-text green darken-1" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -173,6 +174,43 @@
             <wz-step title="{{'userLabels.userSignupStructureSection' | translate }}" template="app/components/directives/wizard/step.html">
                 <div class="row"></div>
                 <form novalidate class="col s12" name="userStructureSection">
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <label for="userStructure">{{'userLabels.userStructureCity' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                       </div>
+                        <div class="input-field col s3">
+                            <input type="text" id="userStructureCity" ng-autocomplete ng-model="signup.structureCity" details="signup.detailsStructureCity" placeholder="" ng-change="changeCityName();" ng-blur="resetStructure();" />
+                            <label for="userStructureCity">{{'userLabels.userStructureCity' | translate }}</label>
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <label for="userStructure">{{'userLabels.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                       </div>
+                        <div class="input-field col s3">
+                            <input placeholder="{{'userLabels.userStructureName' | translate }}" ng-model="signup.structure" id="userStructure" 
+                            	type="text" class="validate" required ng-focus="loadStructures()">
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <label for="userStructure">{{'userLabels.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                       </div>
+                        <div class="input-field col s3">
+                            <select name="userStructureSelect" ng-model="signup.structureTruc" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1" 
+                            	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures | orderBy:'label' track by struct._id" ng-change="applyChangeStructure()" ng-blur="applyChangeStructure()">
+                            </select>
+                            <input type="hidden" ng-model="signup.structure2" value="" />
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
                     
                      <!-- actions buttons -->
                     <div class="row">&nbsp;</div>
@@ -180,7 +218,8 @@
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12 center">
                             <a href="" class="btn red lighteen-1 white-text" ng-click="doTheBack()">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                            <button class="btn white-text blue-grey darken-3" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
+                            <button class="btn white-text blue-grey darken-3" wz-previous type="submit" name="previous">{{'commons.buttons.previous' | translate }}</button>&nbsp;
+                            <button class="btn white-text green darken-1" wz-next type="submit" name="next" ng-hide="playerCivilSection.$invalid">{{'commons.buttons.next' | translate }}</button>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -188,10 +227,35 @@
             </wz-step>
             
             
-            <!-- step choix du club -->
+            <!-- step Résumé -->
             <wz-step title="{{'userLabels.userSignupSumup' | translate }}" template="app/components/directives/wizard/step.html">
                 <div class="row"></div>
                 <form class="col s12" name="userSumup">
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s6">
+                            {{signup.gender}} {{signup.name}} {{signup.firstname}}
+                       </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s6">
+                            {{signup.email}}
+                       </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s1">
+                            <img  src="assets/images/activity/{{signup.activity}}.jpg"/><br/>
+                       </div>
+                        <div class="input-field col s5">
+                        	{{signup.detailsStructureCity.name}}<br>
+                        	{{signup.structure2}}
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
                     
                     
                     <!-- actions buttons -->
