--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -220,8 +220,30 @@
 
         <div class="modal-footer">
             <button type="submit" class="waves-effect waves-red btn green darken-1" translate="commons.buttons.validate"/>
-            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
+            <a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
                 translate}}</a>
         </div>
     </form>
+</div>
+
+<!-- Modal SignUp OK ! -->
+<div id="modalSignupOK" class="modal">
+	<div class="modal-header center-align ">
+        <h5>
+            <span class="fa fa-sign-in"></span>
+            <span translate="content.signup.label.title"></span>
+        </h5>
+    </div>
+    <div class="modal-content grey lighten-3 ">
+		<div class="row">
+			<div class="col s12">
+			{{'modalSignupOk.line1' | translate}}<br>
+			{{'modalSignupOk.line2' | translate}}<br>
+			{{'modalSignupOk.line3' | translate}}<br>
+			</div>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<a href="" ng-click="closeSignupOk()" class="modal-action modal-closewaves-effect waves-red btn green darken-1">{{'commons.buttons.close' | translate}}</a>
+	</div>
 </div>
