--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -189,6 +189,18 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col s3">
+                            <label for="userStructure">{{'userLabels.userStructureCity' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                       </div>
+                        <div class="input-field col s3">
+                            <input type="text" id="testGoogle" ng-autocomplete ng-model="signup.structureCity2" details="signup.detailsStructureCity2" placeholder="" />
+                            <label for="userStructureCity2">{{'userLabels.userStructureCity' | translate }}</label>
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s3">
                             <label for="userStructure">{{'userLabels.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
                        </div>
                         <div class="input-field col s3">
@@ -206,7 +218,7 @@
                             <select name="userStructureSelect" ng-model="signup.structureTruc" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1" 
                             	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures | orderBy:'label' track by struct._id" ng-change="applyChangeStructure()" ng-blur="applyChangeStructure()">
                             </select>
-                            <input type="hidden" ng-model="signup.structure2" value="" />
+                            <input type="hidden" ng-model="signup.structure2" />
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
