--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -77,8 +77,8 @@
                 <li class="collection-item" ng-repeat="team in listTeamHome">
                     <span class="title blue-grey-text text-darken-1">{{team.label}}</span>
                     <a href="#/private/teamStats/{{team._id}}"
-                       class="btn-floating waves-effect waves-light red lighten-1 right"><i
-                            class="fa fa-bar-chart fa-1x"></i></a>
+                       class="waves-effect waves-light red lighten-1  white-text right"><i
+                            class="fa fa-bar-chart fa-2x"></i></a>
                 </li>
             </ul>
             <br/>
