--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -85,7 +85,7 @@
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>
                         {{'headerMenu.notification' | translate }}</a></li>
                     -->
-                    <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>
+                    <li><a href="#/private/mainStats" class="white-text light"><i class="fa fa-bar-chart left"></i>
                         {{'headerMenu.stats' | translate }}</a></li>
                     <li><a href="#/private/effective/{{user.effectiveDefault}}" class="white-text light"><i class="mdi-social-people left"></i>
                         {{'headerMenu.effective' | translate }}</a></li>
@@ -117,7 +117,7 @@
                         <span class="hide-on-med-and-down" translate="headerMenu.notification"></span>
                     </a></li>
                     -->
-                    <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i>
+                    <li><a href="#/private/mainStats" class="light"><i class="fa fa-bar-chart left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.stats"></span></a>
                     </li>
                     <li><a href="#/private/effective/{{user.effectiveDefault}}" class="light"><i class="mdi-social-people left"></i>
