--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -18,7 +18,7 @@
                         <div class="col m3 s12">
                             <div class="row blue-grey-text text-darken-2 left-align"><h5>{{'playerLabels.playerCivilSection' | translate }}</h5></div>
                             <div class="row"><div class="divider red lighten-1"></div></div>
-                            <div class="row blue-grey-text text-darken-2 left-align">{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.nationality.label}}</div>
+                            <div class="row blue-grey-text text-darken-2 left-align">{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.nationality}}</div>
                         </div>
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
                         <div class="col m3 s12">
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                     <div class="col m4 s12 center-align">
-                        <a href="#/private/statPlayer/{{player._id}}">
+                        <a href="#/private/playerStats/{{player._id}}">
                             <i class="red-text text-lighten-1 small fa fa-bar-chart tooltipped" 
                             data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
                         </a>
