--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -36,11 +36,11 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m3 s6">
-                          <input placeholder="{{'userLabels.userFirstname' | translate }}" ng-model="signup.firstname" id="userFirstname" type="text" class="validate" required>
+                          <input placeholder="{{'civilSection.label.userFirstname' | translate }}" ng-model="signup.firstname" id="userFirstname" type="text" class="validate" required>
                           <label for="userFirstname">{{'civilSection.label.userFirstname' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col m3 s6">
-                          <input placeholder="{{'userLabels.userName' | translate }}" ng-model="signup.name" id="userName" type="text" class="validate" required>
+                          <input placeholder="{{'civilSection.label.userName' | translate }}" ng-model="signup.name" id="userName" type="text" class="validate" required>
                           <label for="userName">{{'civilSection.label.userName' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
