--- a/src/app/modules/commons/users/signup/signupDone.html
+++ b/src/app/modules/commons/users/signup/signupDone.html
@@ -1,1 +1,40 @@
-Signup Done
+<div class="container">
+<!-- body start-->
+    <div class="row"> <div class="col s10"></div></div>   
+    
+	<div class="container">
+        <div class="section">
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12">
+                    <div class="center icon-block">
+                         <div class="red-text text-lighten-1">
+                             <i class="medium material-icons">insert_emoticon</i>
+                         </div>
+                        <h5 class="center" translate="endPage.title"></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                {{'endPage.text.1' | translate }}<br>&nbsp;<br>
+                {{'endPage.text.2' | translate }}<br>&nbsp;<br>
+                {{'endPage.text.3' | translate }}<br>&nbsp;<br>
+                {{'endPage.text.4' | translate }}<br>&nbsp;<br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="right col s12">
+                	<span class="right">{{'endPage.text.signature' | translate }}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="center col s12">
+                <a href="" class="btn white-text blue-grey darken-3" ng-click="goHome()">{{'endPage.buttonHome' | translate }}</a>&nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
+   
+<!-- body end-->
+</div>
