--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -8,103 +8,140 @@
         <div class="col s12 m6 l8">
 
             <!-- Event -->
-            <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-calendar left"></i>
-                {{'dashboard.event' | translate }}</h5></div>
+            <div ng-show="events.length > 0">
+                <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'dashboard.event' | translate }}</h5></div>
+                <div>
+                    <div class="card white">
+                        <div class="card-content blue-grey darken-1 white-text flow-text">
+                            <span class="card-title">{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</span>
+                            <hr class="white" />
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
+                            <h6>{{currentEvent.address.formatedAddress}}</h6>
+                            <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
+                                <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
+                            </div>
 
-            <div>
-                <div class="card white">
-                    <div class="card-content blue-grey darken-1 white-text flow-text">
-                        <span class="card-title">{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</span>
-                        <hr class="white" />
-                        <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
-                        <h6>{{currentEvent.address.formatedAddress}}</h6>
-                        <div map-lazy-load="https://maps.google.com/maps/api/js" ng-if="mapShow">
-                            <map center="{{currentEvent.address.lat}}, {{currentEvent.address.lng}}" zoom="16"></map>
                         </div>
-                        
+                        <div class="card-action white">
+                            <a href='#/private/agenda/{{currentEffective._id}}' class="hide-on-med-and-down left waves-effect waves-light blue-grey-text text-darken-1">
+                                <i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}
+                            </a>
+                            <a href="" ng-show="indexEvent < events.length -1" ng-click="nextEvent()" class="btn-floating blue-grey darken-1 right white-text">
+                                <i class="mdi-navigation-chevron-right right"></i></a>
+                            <a href="" ng-show="indexEvent > 0" ng-click="previousEvent()" class="btn-floating blue-grey darken-1 right white-text">
+                                <i class="mdi-navigation-chevron-left left"></i></a>
+                            <div>&nbsp;</div>
+                        </div>
                     </div>
-                    <div class="card-action white">
-                        <a href='#/private/agenda/{{meta.sandbox._id}}' class="hide-on-med-and-down left waves-effect waves-light blue-grey-text text-darken-1">
-                            <i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}
-                        </a>
-                        <a href="" ng-show="indexEvent < events.length -1" ng-click="nextEvent()" class="btn-floating blue-grey darken-1 right white-text">
-                            <i class="mdi-navigation-chevron-right right"></i></a>
-                        <a href="" ng-show="indexEvent > 0" ng-click="previousEvent()" class="btn-floating blue-grey darken-1 right white-text">
-                            <i class="mdi-navigation-chevron-left left"></i></a>
-                        <div>&nbsp;</div>
+                </div>
+            </div>
+            <div class="row" ng-show="events.length === 0">
+                <div class="col s12">
+                    <div class="card">                        
+                        <div class="row center">
+                            <a href="#/private/addEvent/{{currentEffective._id}}" class="blue-grey-text text-darken-1">
+                                <i class="fa fa-plus-square-o fa-5x"></i> 
+                                <h3>{{'mainAgenda.buttons.addEvent' | translate }}</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
             <br/>
 
             <!-- Collecte-->
-            <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats'
-                | translate }}</h5></div>
-            <div>
-                <div class="card small">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/ACT-HAND-STAT.jpg">
-                        <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque, le 15/04/2015</span>
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator blue-grey-text text-darken-1">Défaite 21 - 20 <i
-                                class="mdi-navigation-more-vert right"></i></span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title blue-grey-text text-darken-1">Card Title <i
-                                class="mdi-navigation-close right"></i></span>
+            <div ng-show="collecte._id!=null">
+                <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats'
+                    | translate }}</h5></div>
+                <div>
+                    <div class="card small">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/ACT-HAND-STAT.jpg">
+                            <span class="card-title white-text flow-text">CRMHB Rennes - USDK Dunkerque, le 15/04/2015</span>
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator blue-grey-text text-darken-1">Défaite 21 - 20 <i
+                                    class="mdi-navigation-more-vert right"></i></span>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title blue-grey-text text-darken-1">Card Title <i
+                                    class="mdi-navigation-close right"></i></span>
 
-                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                    <div class="card-action blue-grey darken-1">
-                        <a href='#' class="hide-on-med-and-down left waves-effect waves-light white-text"><i
-                                class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
-                        <a href='#' class="right white-text"><i
-                                class="mdi-navigation-chevron-right right"></i>Suivant</a>
-                        <a href="#" class="right white-text"><i
-                                class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                        <div class="card-action blue-grey darken-1">
+                            <a href='#' class="hide-on-med-and-down left waves-effect waves-light white-text"><i
+                                    class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a>
+                            <a href='#' class="right white-text"><i
+                                    class="mdi-navigation-chevron-right right"></i>Suivant</a>
+                            <a href="#" class="right white-text"><i
+                                    class="mdi-navigation-chevron-left left"></i>Précédent</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- player list-->
+        <!-- Right column-->
         <div class="col s12 m6 l4">
-            <!-- TOP 3 -->
-            <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'dashboard.teams' |
-                translate }}</h5></div>
-            <ul class="collection">
-                <li class="collection-item" ng-repeat="team in listTeamHome">
-                    <span class="title blue-grey-text text-darken-1">{{team.label}}</span>
-                    <a href="#/private/teamStats/{{team._id}}"
-                       class="waves-effect waves-light red lighten-1  white-text right"><i
-                            class="fa fa-bar-chart fa-2x"></i></a>
-                </li>
-            </ul>
-            <br/>
+            <!-- team list -->
+            <div ng-show="listTeamHome.length > 0">
+                <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'dashboard.teams' | translate }}</h5></div>
+                <ul class="collection">
+                    <li class="collection-item" ng-repeat="team in listTeamHome">
+                        <span class="title blue-grey-text text-darken-1">{{team.label}}</span>
+                        <a href="#/private/teamStats/{{team._id}}"
+                           class="waves-effect waves-light red lighten-1  white-text right"><i
+                                class="fa fa-bar-chart fa-2x"></i></a>
+                    </li>
+                </ul>
+                <br/>
+            </div>
+            <div ng-show="listTeamHome.length === 0">
+                <div class="card blue lighten-2">                        
+                    <div class="row center">
+                        <a href="#/private/addTeam/{{false}}" class="blue-grey-text text-darken-1">
+                            <i class="fa fa-plus-square-o fa-3x"></i> 
+                            <h4>{{'mainEffective.buttons.addTeamHome' | translate }}</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             
-            <!-- List Player -->
-            <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player'
-                | translate }}</h5></div>
-            <div>
-                <form class="forms forms-inline input-field ">
-                    <input type="text" class="grey lighten-4" id="query" ng-model="query">
-                    <label for="query">Filter</label>
-                </form>
-            </div>
-            <ul class="collection">
-                <li class="collection-item avatar" ng-repeat="player in effective | filter:query">
-                    <simple-avatar width="'30px'" person="player"
-                                   link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
-                    <span class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</span>
+            <!-- Player -->
+            <div ng-show="effective.length > 0">
+                <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player' | translate }}</h5></div>
+                <div>
+                    <form class="forms forms-inline input-field ">
+                        <input type="text" class="grey lighten-4" id="query" ng-model="query">
+                        <label for="query">Filter</label>
+                    </form>
+                </div>
+                <ul class="collection" ng-show="effective.length > 0">
+                    <li class="collection-item avatar" ng-repeat="player in effective | filter:query">
+                        <simple-avatar width="'30px'" person="player"
+                                       link="('#/private/viewPlayer/' + player._id)"></simple-avatar>
+                        <span class="title red-text text-lighten-1">{{player.firstname}} {{player.name}}</span>
 
-                    <p>{{player.positionType}}</p>
-                    <a href="#/private/playerStats/{{player._id}}"
-                       class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i
-                            class="fa fa-bar-chart"></i></a>
-                </li>
-            </ul>
+                        <p>{{player.positionType}}</p>
+                        <a href="#/private/playerStats/{{player._id}}"
+                           class="secondary-content btn-floating waves-effect waves-light red lighten-1"><i
+                                class="fa fa-bar-chart"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div ng-show="effective.length === 0">
+                <div class="card orange lighten-1">                        
+                    <div class="row center">
+                        <a href="#/private/addPlayer/{{meta._id}}" class="blue-grey-text text-darken-1">
+                            <i class="fa fa-plus-square-o fa-3x"></i> 
+                            <h4>{{'mainEffective.buttons.addPlayer' | translate }}</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
